syntax = "proto3";
package orders.transactions.immediate;

import "gogoproto/gogo.proto";
import "ids/base/classification_id.proto";
import "ids/base/identity_id.proto";
import "ids/base/any_ownable_id.proto";
import "lists/base/property_list.proto";
import "types/base/height.proto";

message Message {
  string from = 1;
  ids.base.IdentityID from_i_d = 2;
  ids.base.ClassificationID classification_i_d = 3;
  ids.base.IdentityID taker_i_d = 4;
  ids.base.AnyOwnableID maker_ownable_i_d = 5;
  ids.base.AnyOwnableID taker_ownable_i_d = 6;
  types.base.Height expires_in = 7;
  string maker_ownable_split = 8;
  string taker_ownable_split = 9;
  lists.base.PropertyList immutable_meta_properties = 10;
  lists.base.PropertyList immutable_properties = 11;
  lists.base.PropertyList mutable_meta_properties = 12;
  lists.base.PropertyList mutable_properties = 13;
}